@startuml

class RuntimeException

package org.reindexer {

    package org.reindexer.connector {
        class Reindexer
        class Namespace

        package bindings {

            package cproto {
                class CprotoBinding
                class Connection
                class NetBuffer
                class RPCEncoder
                class RPCDecoder

                CprotoBinding --|> Binding
            }

            package def {
                class IndexDef
                class NamespaceDef
                class StorageOpts
            }

            interface Binding
            interface RawBuffer
            interface FetchMore

            class Err
            class Res

            Reindexer -up-> Binding
            RawBuffer <-- Binding


            Connection --> RPCEncoder
            NetBuffer --> RPCDecoder

            NetBuffer --> Connection
            NetBuffer <-- Connection

            CprotoBinding --> Connection

            NetBuffer --|> RawBuffer
        }

        package exceptions {
            RuntimeException <|-- ReindexerException
            ReindexerException <|-- NetworkException
            ReindexerException <|-- UnimplementedException
            NetworkException <|-- InvalidProtocolException
            ReindexerException <|-- DbException
            DbException <|-- NsExistsException
            DbException <|-- NsNotFoundException

        }

        package options {
            class NamespaceOptions
        }
    }

    object Consts {
    }

}

@enduml